Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
 title: Tina Gui
 subtitle: Here you'll find all the ways to get in touch with me
 layout: post
